@@ -1,10 +1,5 @@
 package fr.esgi.fx.kanban.servlet;
 
-import fr.esgi.fx.kanban.model.Tableau;
-import fr.esgi.fx.kanban.service.IColonneService;
-import fr.esgi.fx.kanban.service.ITableauService;
-import fr.esgi.fx.kanban.service.ServiceFactory;
-import fr.esgi.fx.kanban.viewmodel.VueSupport;
 import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
@@ -24,6 +19,16 @@ public class BoardNewServlet extends HttpServlet {
     // Palette proposée pour la barre de couleur du tableau (alignée sur le design system).
     private static final List<String> COULEURS = List.of(
             "#378ADD", "#1D9E75", "#BA7517", "#E24B4A", "#635BFF", "#475569");
+    private static final long BOARD_CREATION_PRICE_CENTS = 500L;
+    private static final String BOARD_CREATION_CURRENCY = "eur";
+    private static final String BOARD_NAME_PATTERN = "^[a-zA-Z0-9]+$";
+
+    private static final String TEMPLATE_BOARD_NEW    = "board-new";
+    private static final String CONTENT_TYPE_HTML     = "text/html;charset=UTF-8";
+    private static final String VAR_USER_INITIALES    = "userInitiales";
+    private static final String VAR_COULEURS          = "couleurs";
+    private static final String VAR_COULEUR           = "couleur";
+    private static final String VAR_NAME_ERROR        = "nameError";
 
     // Colonnes créées automatiquement à l'ouverture d'un nouveau tableau.
     private static final List<String> COLONNES_PAR_DEFAUT =
@@ -38,8 +43,6 @@ public class BoardNewServlet extends HttpServlet {
     public void init() {
         templateEngine = (TemplateEngine) getServletContext().getAttribute("templateEngine");
         application = JakartaServletWebApplication.buildApplication(getServletContext());
-        tableauService = ServiceFactory.tableauService();
-        colonneService = ServiceFactory.colonneService();
     }
 
     // Les expressions de lien @{/...} de Thymeleaf 3.1 exigent un WebContext.
@@ -68,12 +71,12 @@ public class BoardNewServlet extends HttpServlet {
 
         WebContext context = newContext(request, response);
         context.setVariable("user", pseudo);
-        context.setVariable("userInitiales", VueSupport.initiales(pseudo));
+        context.setVariable("userInitiales", initiales(pseudo));
         context.setVariable("couleurs", COULEURS);
         context.setVariable("couleur", COULEURS.get(0));
 
-        response.setContentType("text/html;charset=UTF-8");
-        templateEngine.process("board-new", context, response.getWriter());
+        response.setContentType(CONTENT_TYPE_HTML);
+        templateEngine.process(TEMPLATE_BOARD_NEW, context, response.getWriter());
     }
 
     @Override
@@ -87,46 +90,59 @@ public class BoardNewServlet extends HttpServlet {
         Long userId = (Long) session.getAttribute("userId");
 
         String name = request.getParameter("name");
-        String couleur = request.getParameter("couleur");
+        String couleur = request.getParameter(VAR_COULEUR);
+        String trimmedName = name == null ? "" : name.trim();
 
         WebContext context = newContext(request, response);
         boolean hasError = false;
 
         // Validation (alignée avec la validation client de kanban.js)
-        if (name == null || name.trim().isEmpty()) {
-            context.setVariable("nameError", "Le nom du tableau est requis.");
+        if (trimmedName.isEmpty()) {
+            context.setVariable(VAR_NAME_ERROR, "Le nom du tableau est requis.");
             hasError = true;
-        } else if (name.trim().length() > 60) {
-            context.setVariable("nameError", "Le nom ne doit pas dépasser 60 caractères.");
+        } else if (trimmedName.length() > 60) {
+            context.setVariable(VAR_NAME_ERROR, "Le nom ne doit pas dépasser 60 caractères.");
+            hasError = true;
+        } else if (!trimmedName.matches(BOARD_NAME_PATTERN)) {
+            context.setVariable(VAR_NAME_ERROR, "Le nom doit contenir uniquement des caractères alphanumériques.");
             hasError = true;
         }
 
         // La couleur doit faire partie de la palette proposée.
         if (couleur == null || !COULEURS.contains(couleur)) {
-            couleur = COULEURS.get(0);
+            couleur = COULEURS.getFirst();
         }
 
         if (hasError) {
             context.setVariable("user", pseudo);
-            context.setVariable("userInitiales", VueSupport.initiales(pseudo));
+            context.setVariable("userInitiales", initiales(pseudo));
             context.setVariable("couleurs", COULEURS);
             context.setVariable("couleur", couleur);
             context.setVariable("name", name);
-            response.setContentType("text/html;charset=UTF-8");
-            templateEngine.process("board-new", context, response.getWriter());
+            response.setContentType(CONTENT_TYPE_HTML);
+            templateEngine.process(TEMPLATE_BOARD_NEW, context, response.getWriter());
             return;
         }
 
-        // Création du tableau, rattachement du créateur comme contributeur, puis
-        // génération des colonnes par défaut. La couleur n'est pas persistée (le
-        // modèle Tableau n'a pas ce champ) : elle est dérivée de l'id à l'affichage.
-        Tableau tableau = tableauService.creer(name.trim(), userId);
-        tableauService.inviterContributeur(tableau.getId(), pseudo);
-        int position = 0;
-        for (String nomColonne : COLONNES_PAR_DEFAUT) {
-            colonneService.creer(nomColonne, position++, tableau.getId());
-        }
+        // TODO : Remplacer par tableauService.create(pseudo, name, couleur)
+        //  puis rediriger vers /board?id=<idCréé>.
+        response.sendRedirect(request.getContextPath() + "/dashboard");
+    }
 
-        response.sendRedirect(request.getContextPath() + "/board?id=" + tableau.getId());
+    /** "jean.d" -> "JD", "alice" -> "A". */
+    private String initiales(String s) {
+        if (s == null || s.isBlank()) {
+            return "?";
+        }
+        StringBuilder sb = new StringBuilder();
+        for (String part : s.split("[.\\s_-]+")) {
+            if (!part.isEmpty()) {
+                sb.append(Character.toUpperCase(part.charAt(0)));
+            }
+            if (sb.length() == 2) {
+                break;
+            }
+        }
+        return sb.length() == 0 ? "?" : sb.toString();
     }
 }
